--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
     <head>
         <rel="stylesheet" type="text/css" href="css/main.css" />
-        <meta http-equiv="content-type" content="text/php; charset=utf-8" />
+        <meta http-equiv="content-type" content="text/node; charset=utf-8" />
         <!-- SEO basics: https://www.link-assistant.com/news/html-meta-tags-for-seo.html -->
-        <meta name="description" content="Your gorgeous description">
+        <meta name="description" content="HTML boilerplate">
         <!-- A rich object in social networks -->
         <meta name="og:title" property="og:title" content="Your Awesome Open Graph Title">
         <!-- A robots tag is an element in the HTML of a page that informs search engines which pages on your site should be indexed and which should not. Its functions are similar to robots.txt's. But it is generally used to prevent search engines from indexing individual pages, while robots.txt prevents them from indexing a whole site or any its part. -->
