--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
             <div class="Menu">
                 <ul id="nav"> 
-                    <li>menu item</li>  
-                    <li>menu item</li> 
-                    <li>menu item</li>  
-                    <li>menu item</li> 
-                    <li>menu item</li>  
-                    <li>menu item</li> 
+                    <li>pat was html-meta-tags-for-seo</li>  
+                    <li>cat</li> 
+                    <li>dog</li>  
+                    <li>bat</li> 
+                    <li>fun </li>  
+                    <li>hat</li> 
                 </ul> 
             </div>
 
